# Adonispaiva

./: README.md
rag_inovexa/: .env.example  README.md  docker-compose.yml  pyproject.toml
rag_inovexa/app/: main.py
rag_inovexa/app/api/: deps.py
rag_inovexa/app/api/routers/: __init__.py  admin.py  catalog.py  evals.py  governance.py  health.py  ingest.py  memory.py  query.py
rag_inovexa/app/application/use_cases/: ingest_archive.py  ingest_document.py  run_query.py
rag_inovexa/app/core/: config.py  logging.py
rag_inovexa/app/domain/entities/: chunk.py  document.py  memory_record.py
rag_inovexa/app/domain/services/: authority_resolution.py  query_classification.py  supersession.py
rag_inovexa/app/infrastructure/db/: models.py  session.py
rag_inovexa/app/infrastructure/indexing/: hybrid_search.py
rag_inovexa/app/infrastructure/parsing/: zip_parser.py
rag_inovexa/app/schemas/: catalog.py  ingest.py  query.py
rag_inovexa/app/workers/: reindex_worker.py
rag_inovexa/docs/adr/: ADR-001-arquitetura-base-rag.md
rag_inovexa/scripts/: bootstrap_dev.py  export_catalog.py  run_evals.py  run_ingestion.py
rag_inovexa/tests/contract/: test_query_api.py
rag_inovexa/tests/regression/: test_authority_precedence.py
