[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_inovexa"
version = "0.1.0"
description = "Backend RAG institucional do GPT Inovexa 2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "python-docx>=1.1.2",
  "pypdf>=4.2.0",
  "openpyxl>=3.1.5"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
